added path generation

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,6 +9,10 @@
   "mapNull": "No path to find.",
   "mapRegexFail": "The map graph is not in the expected format.",
   "merchant": "Merchant",
+  "noBoss": "The map does not contain ending points.",
+  "noNeow": "The map does not contain starting points.",
+  "pathHasCycle": "A cycle has been detected in the map. Check the transitions.",
+  "pathStillOpen": "A path was found that does not lead to the end. Check the transitions.",
   "rest": "Rest",
   "title": "Slay the Spire Path Finder",
   "treasure": "Treasure",
