--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -9,6 +9,10 @@
   "mapNull": "Nenhum caminho para buscar.",
   "mapRegexFail": "O grafo do mapa não está no formato esperado.",
   "merchant": "Merchant",
+  "noBoss": "O mapa não contém pontos de fim.",
+  "noNeow": "O mapa não contém pontos de início.",
+  "pathHasCycle": "Um ciclo foi detectado no mapa. Verifique as transições.",
+  "pathStillOpen": "Um caminho foi encontrado que não leva ao fim. Verifique as transições.",
   "rest": "Rest",
   "title": "Busca de Caminho para Slay the Spire",
   "treasure": "Treasure",
