--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,20 +1,17 @@
 {
   "bestPath": "Best path",
   "duplicate": "There is a transition appearing more than once in the map. Maybe one of them was typed incorrectly?",
-  "elite": "eLite",
-  "enemy": "Enemy",
   "findBestPath": "Find the best path",
+  "floor": "{kind, select, U{Unknown} M{Merchant} T{Treasure} R{Rest} E{Enemy} L{eLite} other{{kind}}}",
   "map": "Map",
   "mapHint": "Enter a directed graph represented by a kind of \"incidence list\".\nEvery floor is represented by a node, which is represented by a letter and a number. The letter represents which floor kind it is. Look at the labels above and use the uppercase letter for each. The number identifies each floor of a kind.\nEach transition from one floor to another must be represented by an \"incidence\". Transitions can be separated by whitespace and new lines. A transition is represented by the name of the exiting floor, a hyphen and the name of the entering floor.\nThere are two special floors, \"N\" and \"B\". \"N\" represents the beginning of an Act. There must be a transition from \"N\" to each one of the starting floors that you can choose when you begin an Act. \"B\" represents the Act''s Boss. There must be a transition to \"B\" for each floor that leads to the Act''s Boss.",
   "mapNull": "No path to find.",
   "mapRegexFail": "The map graph is not in the expected format.",
-  "merchant": "Merchant",
   "noBoss": "The map does not contain ending points.",
   "noNeow": "The map does not contain starting points.",
+  "outputHint": "The paths found will be displayed here, one per line, sorted from best, above, to worst, below.\nEach path shows the floors in sequence, the total weight and how many of each floors are.",
+  "outputLabel": "Paths from best to worst",
   "pathHasCycle": "A cycle has been detected in the map. Check the transitions.",
   "pathStillOpen": "A path was found that does not lead to the end. Check the transitions.",
-  "rest": "Rest",
-  "title": "Slay the Spire Path Finder",
-  "treasure": "Treasure",
-  "unknown": "Unknown"
+  "title": "Slay the Spire Path Finder"
 }
