--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,20 +1,17 @@
 {
   "bestPath": "Melhor caminho",
   "duplicate": "Há uma transição aparecendo mais de uma vez no mapa. Talvez uma delas foi escrita errada?",
-  "elite": "eLite",
-  "enemy": "Enemy",
   "findBestPath": "Buscar o melhor caminho",
+  "floor": "{kind, select, U{Unknown} M{Merchant} T{Treasure} R{Rest} E{Enemy} L{eLite} other{{kind}}}",
   "map": "Mapa",
   "mapHint": "Insira um grafo direcionado representado por um tipo de \"lista de incidência\".\nCada andar é representado por um nodo, que é representado por uma letra e um número. A letra representa que tipo de andar que é. Veja os títulos acima e use a letra maiúscula de cada um. O número identifica cada andar de um tipo.\nCada transição entre andares deve ser representado por uma \"incidência\". Transições podem ser separadas por espaços e novas linhas. A transição é representada pelo nome do andar de saída, um hífen e o nome do andar de entrada.\nHá 2 andares especiais, \"N\" e \"B\". \"N\" representa o começo do Ato. Deve haver uma transição de \"N\" para cada um dos andares iniciais que você pode escolher quando começa um Ato. \"B\" representa o Chefe do Ato. Deve haver uma transição para o \"B\" para cada andar que leva ao Chefe do Andar.",
   "mapNull": "Nenhum caminho para buscar.",
   "mapRegexFail": "O grafo do mapa não está no formato esperado.",
-  "merchant": "Merchant",
   "noBoss": "O mapa não contém pontos de fim.",
   "noNeow": "O mapa não contém pontos de início.",
+  "outputHint": "Os caminhos encontrados serão exibidos aqui, um por linha, ordenados do melhor, acima, para o pior, abaixo.\nCada caminho exibe os andares em sequência, o peso total e quantos tem de cada andar.",
+  "outputLabel": "Caminhos do melhor ao pior",
   "pathHasCycle": "Um ciclo foi detectado no mapa. Verifique as transições.",
   "pathStillOpen": "Um caminho foi encontrado que não leva ao fim. Verifique as transições.",
-  "rest": "Rest",
-  "title": "Busca de Caminho para Slay the Spire",
-  "treasure": "Treasure",
-  "unknown": "Unknown"
+  "title": "Busca de Caminho para Slay the Spire"
 }
