added floor drop down button

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,7 +2,8 @@
   "bestPath": "Best path",
   "duplicate": "There is a transition appearing more than once in the map. Maybe one of them was typed incorrectly?",
   "findBestPath": "Find the best path",
-  "floor": "{kind, select, U{Unknown} M{Merchant} T{Treasure} R{Rest} E{Enemy} L{eLite} other{{kind}}}",
+  "floor": "Floor",
+  "floorEnum": "{kind, select, N{Neow} U{Unknown} M{Merchant} T{Treasure} R{Rest} E{Enemy} L{eLite} B{Boss} other{{kind}}}",
   "imagePlaceHolder": "This is where the image will be displayed when it''s loaded.\nLoad it by pressing the top right corner",
   "map": "Map",
   "mapHint": "Enter a directed graph represented by a kind of \"incidence list\".\nEvery floor is represented by a node, which is represented by a letter and a number. The letter represents which floor kind it is. Look at the labels above and use the uppercase letter for each. The number identifies each floor of a kind.\nEach transition from one floor to another must be represented by an \"incidence\". Transitions can be separated by whitespace and new lines. A transition is represented by the name of the exiting floor, a hyphen and the name of the entering floor.\nThere are two special floors, \"N\" and \"B\". \"N\" represents the beginning of an Act. There must be a transition from \"N\" to each one of the starting floors that you can choose when you begin an Act. \"B\" represents the Act''s Boss. There must be a transition to \"B\" for each floor that leads to the Act''s Boss.",
