--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -2,7 +2,8 @@
   "bestPath": "Melhor caminho",
   "duplicate": "Há uma transição aparecendo mais de uma vez no mapa. Talvez uma delas foi escrita errada?",
   "findBestPath": "Buscar o melhor caminho",
-  "floor": "{kind, select, U{Unknown} M{Merchant} T{Treasure} R{Rest} E{Enemy} L{eLite} other{{kind}}}",
+  "floor": "Andar",
+  "floorEnum": "{kind, select, N{Neow} U{desconhecido (U)} M{vendedor (M)} T{Tesouro} R{descansaR} E{inimigo (E)} L{eLite} B{chefe (B)} other{{kind}}}",
   "imagePlaceHolder": "Aqui é onde será exibida a imagem quando ela for carregada.\nCarregue ela pressionando no canto superior direito.",
   "map": "Mapa",
   "mapHint": "Insira um grafo direcionado representado por um tipo de \"lista de incidência\".\nCada andar é representado por um nodo, que é representado por uma letra e um número. A letra representa que tipo de andar que é. Veja os títulos acima e use a letra maiúscula de cada um. O número identifica cada andar de um tipo.\nCada transição entre andares deve ser representado por uma \"incidência\". Transições podem ser separadas por espaços e novas linhas. A transição é representada pelo nome do andar de saída, um hífen e o nome do andar de entrada.\nHá 2 andares especiais, \"N\" e \"B\". \"N\" representa o começo do Ato. Deve haver uma transição de \"N\" para cada um dos andares iniciais que você pode escolher quando começa um Ato. \"B\" representa o Chefe do Ato. Deve haver uma transição para o \"B\" para cada andar que leva ao Chefe do Andar.",
